# gerador-de-resumos

./: DOCUMENTACAO.md  README.md  app.py  core.py  main.py  packages.txt  pyproject.toml
utils/: audio_handler.py  pdf_handler.py
